public/styles/page/dashboard.css
.dashboard .carbon-calculator-container {
  width: 100%;
  background-color: var(--bg-100);
  padding-top: 86px;
  height: auto;
}
.dashboard .carbon-calculator-inner {
  display: flex;
  border-width: 2px;
  position: relative;
  flex-wrap: wrap;
  box-sizing: border-box;
  justify-content: center;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px;
}
.dashboard .hero-section-container {
  width: 100%;
}
.dashboard .hero-section-inner {
  max-width: 512px;
}
.dashboard .hero-section-inner h1 {
  margin: 0;
  color: var(--green-500);
}

.dashboard .bento {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 32px;
  width: 100%;
}

.dashboard .bento .form-container { 
  grid-area: 1 / 1 / 2 / 2;
  display: flex;
  flex-direction: column;
  gap: 32px;
}
.dashboard .bento .form-inner {
  padding: 32px;
  background-color: var(--bg-100-a);
  border-radius: var(--round-lg);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
}
.dashboard .bento .form-inner .title {
  display: flex;
  gap: 16px;
  margin-bottom: 16px;
}
.dashboard .bento .transportation .title svg {
  width: 32px;
  background-color: var(--green-200);
  padding: 10px;
  border-radius: var(--round-sm);
}
.dashboard .bento .energy-used .title svg {
  width: 32px;
  background-color: var(--red-100);
  padding: 10px;
  border-radius: var(--round-sm);
}
.dashboard .bento .form-inner h2 {
  margin: auto 0;
  color: var(--green-500);
}
.dashboard .bento .energy-used .form-input {
  display: flex;
  gap: 16px;
}
.dashboard .bento .form-inner .form-input label {
  display: block;
  text-transform: uppercase;
  font-weight: var(--bold-md);
  color: var(--gray-400);
  margin-top: 24px;
  margin-bottom: 10px;
  font-size: var(--font-sm);
}
.dashboard .bento .form-inner .form-input input {
  display: inline-block;
  box-sizing: border-box;
  width: 100%;
  height: 50px;
  background-color: var(--gray-100);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
  border-radius: var(--round-sm);
  padding: 10px;
  font-size: large;
}
.dashboard .bento .form-inner .form-input .vehicle-type-buttons {
  display: flex;
  gap: 16px;
  width: 100%;
}
.dashboard .bento .form-inner .form-input .vehicle-type-buttons button {
  width: 50%;
  height: 54px;
  border: none;
  background-color: var(--green-400);
  border: solid;
  border-color: var(--green-400);
  border-width: 1px;
  border-radius: var(--round-sm);
  color: var(--text-white);
  font-size: medium;
  display: flex;
  justify-content: center;
  gap: 10px;
}
.dashboard .bento .form-inner .form-input .vehicle-type-buttons button:hover {
  background-color: var(--green-500);
}
.dashboard .bento .form-inner .form-input .vehicle-type-buttons button svg {
  width: 24px;
  background-color: transparent;
  padding: 0;
  fill: var(--text-white);
}
.dashboard .bento .form-inner .form-input .vehicle-type-buttons button span {
  margin: auto 0;
}
.dashboard .bento .form-container .submition {
  display: flex;
  gap: 16px;
}
.dashboard .bento .form-container .submition .calculate {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 256px;
  height: 54px;
  border: none;
  background-color: var(--green-400);
  border-radius: var(--round-xl);
  color: var(--text-white);
  font-size: large;
  gap: 10px;
}
.dashboard .bento .form-container .submition .calculate svg {
  width: 24px;
  fill: var(--text-white);
}
.dashboard .bento .form-container .submition .reset {
  display: flex;
  align-items: center;
  border: none;
  font-size: large;
  gap: 10px;
  text-decoration: none;
  color: var(--text);
  background-color: transparent;
  border: none;
}
.dashboard .bento .form-container .submition .reset svg {
  width: 24px;
  fill: var(--text);
}

.dashboard .bento .right-container {
  grid-area: 1 / 2 / 2 / 3;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.dashboard .right-container .eco-tip {
  background-color: var(--bg-100-a);
  border: solid;
  border-radius: var(--round-lg);
  border-color: var(--gray-300);
  border-width: 1px;
  padding: 24px 16px;
  gap: 16px;
  height: auto;
}
.dashboard .right-container .eco-tip .heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.dashboard .right-container .eco-tip .heading h3 {
  color: var(--green-400);
  margin: 0;
}
.dashboard .right-container .eco-tip svg {
  max-width: 32px;
  fill: var(--green-400);
}
.dashboard .right-container .eco-tip .content .checkbox {
  padding-top: 16px;
}
.dashboard .right-container .eco-tip .content input[type="checkbox"] {
  display: none;
}
.dashboard .right-container .eco-tip .content label {
  position: relative;
  padding-left: 32px;
  cursor: pointer;
  display: inline-block;
  padding-bottom: 8px;
  opacity: 100%;
  transition: opacity 0.7s;
}

.dashboard .right-container .eco-tip .content label::before {
  content: "";
  position: absolute;
  left: 0;
  top: 2px;
  width: 18px;
  height: 18px;
  border: 2px solid var(--green-400);
  border-radius: 4px;
  background: white;
}
.dashboard .right-container .eco-tip .content label::after {
  content: "";
  position: absolute;
  left: 4px;
  top: 6px;
  width: 10px;
  height: 6px;
  border: solid var(--text-white);
  border-width: 0 0 2px 2px;
  transform: rotate(-45deg);
  opacity: 0;
  transition: opacity 0.2s ease;
}
.dashboard .right-container .eco-tip .content input[type="checkbox"]:checked + label::after {
  opacity: 1;
}
.dashboard .right-container .eco-tip .content input[type="checkbox"]:checked + label::before {
  background-color: var(--green-300);
  border-color: var(--green-400);
}
.dashboard .right-container .eco-tip .eco-tivation {
  background-color: var(--bg-100);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
  border-radius: var(--round-md);

  padding: 16px;
  color: var(--green-400);
}

.dashboard .right-container .eco-tip .eco-tivation p {
  margin: 0;
}



.dashboard .bento .your-impact {
  filter: hue-rotate(280deg);
  background-position: center;
  border-radius: var(--round-lg);
  height: 436px;
  padding: 46px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  transition: filter 1s;
}
.dashboard .bento .your-impact .title {
  color: rgba(50, 50, 50, 0.8)
}
.dashboard .bento .your-impact .title h2 {
  margin: 0;
}
.dashboard .bento .your-impact .visualizer {
  margin: auto 0;
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.dashboard .bento .your-impact .visualizer svg {
  margin: auto;
  fill: rgba(50, 50, 50, 0.5);
  transform: rotate(45deg);
  transform-origin: x-axis y-axis;
  transition: transform 2s;
}
.dashboard .bento .your-impact .visualizer p {
  color: rgba(50, 50, 50, 0.8);
  text-transform: uppercase;
  margin: auto;
}
.dashboard .bento .your-impact .progress {
  width: 100%;
  height: 18px;
  background: #FFFFFF33;
  border: solid;
  border-color: rgba(255, 255, 255, 0.8);
  border-width: 1px;
  border-radius: 999px;
  overflow: hidden;
  backdrop-filter: blur(10px);
}
.dashboard .bento .your-impact .fill {
  width: 0%;
  height: 100%;
  border-radius: 999px;
  background: #0066ff9f;
  box-shadow: 0px 0px 15px 0px #00ccff80;
  transform-origin: left center;
  transition: width 2s;
}
.dashboard .bento .your-impact .progress-text {
  width: 100%;
  display: flex;
  color: rgba(50, 50, 50, 0.8);
  justify-content: space-between;
}

.dashboard .bar-chart-container {
  width: 100%;
  height: 100%;
  padding: 32px;
  margin-top: 32px;
  background-color: var(--gray-100);
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  border: solid;
  border-radius: var(--round-md);
  border-color: var(--gray-300);
  border-width: 1px;
}
.dashboard .bar-chart-container h3 {
  margin: 0;
  font-size: xx-large;
  color: var(--green-400);
}

.dashboard .bar-chart-container .chart-wrapper {
  display: flex;
  margin: 20px auto;

  max-width: 100%;
  width: 100%;
  padding: 4px 0;

  box-sizing: border-box;

  background-color: var(--gray-300);
}

.dashboard .bar-chart-container .chart-wrapper .legend div {
  padding: 32px 0;
  margin: 1px;
  color: var(--text);
}

.dashboard .bar-chart-container .chart-wrapper .legend div p {
  margin: 0 4px;
}

.dashboard .bar-chart-container .chart-wrapper .chart div {
  padding: 32px 0;
  margin: 1px;
  color: var(--text);
}
.dashboard .bar-chart-container .chart-wrapper .chart div p {
  margin: 0 4px;
}

#motorChart {
  background-color: var(--chart-red-100);
}

#carChart {
  background-color: var(--chart-red-200);
}

#acChart {
  background-color: var(--chart-yellow-100);
}

#laptopChart {
  background-color: var(--chart-blue-100);
}

@media (max-width: 398px) {
  .dashboard .bento .form-container .submition {
    display: block;
  }
  .dashboard .bento .form-container .submition .calculate {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 54px;
    border: none;
    background-color: var(--green-400);
    border-radius: var(--round-xl);
    color: var(--text-white);
    font-size: large;
    gap: 10px;
    margin-bottom: 10px;
  }
  .dashboard .bento .form-container .submition .reset {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 54px;
    border: none;
    background-color: var(--bg-100);
    border-radius: var(--round-xl);
    color: var(--text);
    font-size: large;
    gap: 10px;
  }
  .dashboard .bento .energy-used .form-input {
    display: block;
  }
}
@media (max-width: 736px) {
  dashboard .carbon-calculator-container {
    height: auto;
    padding-top: 60px;
  }

  .dashboard .carbon-calculator-inner {
    padding: 16px;
  }

  .dashboard .bento {
    grid-template-columns: 1fr;
    gap: 24px;
  }
  .dashboard .bento {
    grid-template-columns: 1fr;
    grid-column-gap: 32px;
  }
  .dashboard .bento .form-container,
  .dashboard .bento .right-container {
    grid-area: auto;
  }
  .dashboard .bento .your-impact {
    padding: 24px;
  }
}

